--- a/src/client/public/css/style.scss
+++ b/src/client/public/css/style.scss
@@ -1,11 +1,42 @@
 
 #board {
-	margin: 0 auto;
+	margin: 0 auto 20px auto;
+	box-shadow: 0 0 30px white;
 }
 
 #cell {
-	height: 15px;
-	width: 15px;
+	height: 17px;
+	width: 17px;
 	border: 1px solid black;
 	display: inline-block;
+	background-color: white;
+}
+
+.btn {
+	margin: 3px;
+	width: 150px;
+	transition: all .3s ease;
+	&:focus {
+		outline: none !important;
+		box-shadow: 0px 0px 5px white;
+		background-color: transparent;
+	}
+	border-radius: 0px;
+}
+.btn:hover {
+	color: red;
+}
+.btn-primary:hover {
+	background-color: white; 
+	color: #2a9fd6;
+}
+
+.btn-info:hover {
+	background-color: #ffffff;
+	color: #cc0000;
+}
+
+.btn-danger:hover {
+	background-color: white;
+	color: #9933cc;
 }
