--- a/src/client/public/css/style.scss
+++ b/src/client/public/css/style.scss
@@ -1,4 +1,17 @@
 
+
+h1 {
+	color: #9933cc;
+	text-shadow: 1px 1px 0px #ffffff, 
+	-1px -1px 0px #ffffff,
+	-1px 1px 0px #ffffff,
+	1px -1px 0px #ffffff,
+	4px 4px 8px #9933cc,
+	-4px -4px 8px #9933cc,
+	4px -4px 8px #9933cc,
+	-4px 4px 8px #9933cc;
+}
+
 #board {
 	margin: 0 auto 20px auto;
 	box-shadow: 0 0 30px white;
@@ -13,18 +26,20 @@
 }
 
 .btn {
+	font-size: 1.4em;
 	margin: 3px;
 	width: 150px;
 	transition: all .3s ease;
 	&:focus {
 		outline: none !important;
 		box-shadow: 0px 0px 5px white;
-		background-color: transparent;
+		background-color: clear;
 	}
+	&:hover {
+		border-radius: 6px;
+	}
+	border: 2px solid white;
 	border-radius: 0px;
-}
-.btn:hover {
-	color: red;
 }
 .btn-primary:hover {
 	background-color: white; 
@@ -33,10 +48,21 @@
 
 .btn-info:hover {
 	background-color: #ffffff;
-	color: #cc0000;
+	color: #9933cc;
 }
 
 .btn-danger:hover {
 	background-color: white;
-	color: #9933cc;
+	color: #cc0000;
 }
+
+.btn-warning {
+	height: 45px;
+	border-radius: 100px;
+	width: 50px;
+	&:hover {
+		background-color: white;
+		color: orange;
+	}
+}
+
